--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "server",
+  "name": "E-Learning-Management-System",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":"nodemon app",
+    "test": "jest",
+    "dev": "nodemon app",
     "start": "node app.js"
   },
   "author": "",
@@ -13,6 +13,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "jest": "^30.2.0"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.11"
   }
 }
