--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest",
     "dev": "nodemon src/app",
     "start": "node src/.js",
-     "seed": "node src/seed.js"
+     "seed": "node src/prisma/seed/seed.js"
   },
   "author": "",
   "license": "ISC",
