--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon app",
-    "start": "node app.js",
+    "dev": "nodemon src/app",
+    "start": "node src/app.js",
     "seed": "node prisma/seed.js"
   },
   "author": "",
