fix : conflict resolved

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "dev": "nodemon src/app",
-    "start": "node src/.js",
+    "start": "node src/app.js",
     "seed": "node src/prisma/seed/seed.js",
     "migrate": "prisma migrate dev --name init",
     "migrate:deploy": "prisma migrate deploy",
