--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "dev": "nodemon src/app",
     "start": "node src/app.js",
-    "seed": "node src/prisma/seed/seed.js",
-    "reverse-seed":"node src/prisma/seed/reverse.seed.js",
+    "seed": "npx prisma db seed",
+
+    "seed-revert-courses":"node src/prisma/seed/seed-revert-courses.js",
+    "seed-revert-roles":"node src/prisma/seed/seed-revert-roles.js",
+    "seed-revert-users":"node src/prisma/seed/seed-revert-users.js",
+    "seed-revert-all":"node src/prisma/seed/seed-revert.js",
+    
     "migrate": "prisma migrate dev --name init",
     "migrate:deploy": "prisma migrate deploy",
     "generate": "prisma generate"
@@ -22,8 +27,6 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "nodemon": "^3.1.11",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^8.2.1",
     "helmet": "^8.1.0",
@@ -34,5 +37,9 @@
     "nodemon": "^3.1.11",
     "prisma": "^6.19.0",
     "supertest": "^7.1.4"
-  }
+  },
+  "prisma": {
+  "seed": "node src/prisma/seed/seed.js"
+}
+
 }
