--- a/package.json
+++ b/package.json
@@ -8,13 +8,23 @@
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "dev": "nodemon src/app",
     "start": "node src/app.js",
+
+    "prisma-generate" :"npx prisma generate",
+    "reset-db":"npx prisma migrate reset",
+    "migrate":"npx prisma migrate dev --name init",
+    "migrate-deploy":"npx prisma migrate deploy",
     "seed": "npx prisma db seed",
+
     "seed-revert-courses": "node src/prisma/seed/seed-revert-courses.js",
     "seed-revert-roles": "node src/prisma/seed/seed-revert-roles.js",
     "seed-revert-users": "node src/prisma/seed/seed-revert-users.js",
     "seed-revert-all": "node src/prisma/seed/seed-revert.js",
-    "migrate": "prisma migrate dev --name init",
-    "migrate:deploy": "prisma migrate"
+    "push" : "npx prisma db push",
+    "pull":"npx prisma db pull"
+    
+    
+   
+   
   },
   "author": "",
   "license": "ISC",
