--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express-rate-limit": "^8.2.1",
     "helmet": "^8.1.0",
     "jest": "^30.2.0",
+    "jsonwebtoken": "^9.0.2",
     "xss-clean": "^0.1.4"
   },
   "devDependencies": {
