--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,29 +1,29 @@
 name: CI - Node.js App
 
 on:
-    push:
-        branches: [main, development]
-    pull_request:
-        branches: [main, development]
+  push:
+    branches: [server-deploy]
+  pull_request:
+    branches: [server-deploy]
 
 jobs:
-    build-and-test:
-        runs-on: ubuntu-latest
+  build-and-test:
+    runs-on: ubuntu-latest
 
-        steps:
-            - name: Checkout repository
-              uses: actions/checkout@v4
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-            - name: Setup Node.js
-              uses: actions/setup-node@v4
-              with:
-                  node-version: "v22.20.0"
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "v22.20.0"
 
-            - name: Install dependencies
-              run: npm install
+      - name: Install dependencies
+        run: npm install
 
-            - name: Generate Prisma Client
-              run: npx prisma generate
+      - name: Generate Prisma Client
+        run: npx prisma generate
 
-            - name: Run Test Cases
-              run: npm test
+      - name: Run Test Cases
+        run: npm test
