--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -3,7 +3,7 @@ name: CD - Deploy to AWS EC2
 on:
     push:
         branches:
-            - main
+            - server-deploy
 
 jobs:
     deploy:
