--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -26,7 +26,7 @@ jobs:
                       cd ${{ secrets.EC2_PATH }}
 
                       echo "Pulling latest code"
-                      git pull origin main
+                      git pull origin server-deploy
 
                       echo "Installing dependencies"
                       npm install
