--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^5.1.0",
     "jest-mock-extended": "^4.0.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.11"
   },
   "devDependencies": {
